# Brain-Computer

./: .gitignore  README.md  app.py  main.py  pyproject.toml
configs/: config.yaml
src/: data_loader.py  features.py  preprocessing.py  visualization.py  visualize_results.py
tool/: inspect_data.py
