[project]
name = "eeg"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.6.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "pymatreader>=0.0.32",  # For reading .mat files
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0",
    "streamlit>=1.30.0",
    "watchdog>=3.0.0",
]

[tool.uv.workspace]
members = [
    "test",
]
